package net.local.demo.hexagonal.application.ports.incoming;

public interface VerifyBalanceUseCase {
    public float showBalance(Long id);
}
